--- a/app/components/find_interface/courses/summary_component/view.html.erb
+++ b/app/components/find_interface/courses/summary_component/view.html.erb
@@ -6,6 +6,7 @@
   <dt class="app-description-list__label">Financial support</dt>
   <dd data-qa="course__funding_option"><%= course.decorate.funding_option %></dd>
   <dt class="app-description-list__label">Qualification</dt>
+  <%= render FindInterface::Courses::QualificationsSummaryComponent::View.new(find_outcome) %>
   <% if age_range_in_years.present? %>
     <dt class="app-description-list__label">Age range</dt>
     <dd data-qa="course__age_range"><%= age_range_in_years.humanize %></dd>
