--- a/app/views/find/courses/show.html.erb
+++ b/app/views/find/courses/show.html.erb
@@ -1,5 +1,5 @@
 <% provider = Provider.first %>
-<% course = Course.find_by(course_code: "C605").decorate %>
+<% course = RecruitmentCycle.current.courses.find_by(name: "Primary", course_code: "39T4").decorate %>
 
 <% content_for :before_content do %>
   <%= govuk_back_link_to(url = find_path, body = t("find.courses.show.back_to_search")) %>
@@ -15,3 +15,9 @@
 <p class="govuk-body-l" data-qa='course__description'><%= course.description %></p>
 
 <%= render FindInterface::Courses::SummaryComponent::View.new(course) %>
+
+<%= render FindInterface::Courses::ApplyComponent::View.new(course) unless course.has_vacancies? %>
+
+<!--The reason for the Apply component duplication here is because we want to keep the warning text at the top but Keep the Apply button and end of cycle text at the bottom-->
+
+<%= render FindInterface::Courses::ApplyComponent::View.new(course) if course.has_vacancies? || !CycleTimetable.mid_cycle? %>
