--- a/app/views/find/courses/show.html.erb
+++ b/app/views/find/courses/show.html.erb
@@ -21,3 +21,9 @@
 <!--The reason for the Apply component duplication here is because we want to keep the warning text at the top but Keep the Apply button and end of cycle text at the bottom-->
 
 <%= render FindInterface::Courses::ApplyComponent::View.new(course) if course.has_vacancies? || !CycleTimetable.mid_cycle? %>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <%= render FindInterface::Courses::ContentsComponent::View.new(course) %>
+  </div>
+</div>
