--- a/app/assets/stylesheets/find_application.scss
+++ b/app/assets/stylesheets/find_application.scss
@@ -5,3 +5,4 @@
 @import "accessible-autocomplete/dist/accessible-autocomplete.min";
 @import "autocomplete";
 @import "description-list";
+@import "advice";
