Surface FeesAndFinancialSupport component on show page
This includes:

- Fees component
- Bursary component
- ScholarshipAndBursary component
- Loan partial
- Salaried partial

--- a/app/views/find/courses/show.html.erb
+++ b/app/views/find/courses/show.html.erb
@@ -36,6 +36,8 @@
       <%= render partial: "find/courses/salary", locals: { course: } %>
     <% end %>
 
+    <%= render FindInterface::Courses::FeesAndFinancialSupportComponent::View.new(course) %>
+
     <%= render FindInterface::Courses::ApplyComponent::View.new(course) unless course.has_vacancies? %>
   </div>
 </div>
