Use correct recruitment_cycle range method

--- a/app/components/find_interface/courses/fees_component/view.html.erb
+++ b/app/components/find_interface/courses/fees_component/view.html.erb
@@ -25,7 +25,7 @@
         </table>
       <% else %>
         <p class="govuk-body">
-          The course fees for UK students in <%= year_range %> are <%= number_to_currency(fee_uk_eu) %>.
+          The course fees for UK students in <%= cycle_range %> are <%= number_to_currency(fee_uk_eu) %>.
         </p>
       <% end %>
     </div>
