--- a/app/views/find/courses/show.html.erb
+++ b/app/views/find/courses/show.html.erb
@@ -52,6 +52,8 @@
       <%= render partial: "find/courses/train_with_disabilities", locals: { course: } %>
     <% end %>
 
+    <%= render FindInterface::Courses::ContactDetailsComponent::View.new(course) %>
+
     <%= render FindInterface::Courses::ApplyComponent::View.new(course) unless course.has_vacancies? %>
   </div>
 </div>
