Refactor apply url translation into base level

--- a/app/components/find_interface/courses/apply_component/view.html.erb
+++ b/app/components/find_interface/courses/apply_component/view.html.erb
@@ -18,7 +18,7 @@
       <h1 class="govuk-heading-l">Apply</h1>
       <p class="govuk-body">
         Courses are currently closed but you can still
-        <%= govuk_link_to("start or continue an application", Settings.find.apply_base_url) %>
+        <%= govuk_link_to("start or continue an application", Settings.apply_base_url) %>
         anyway.
       </p>
 
