--- a/app/views/find/courses/show.html.erb
+++ b/app/views/find/courses/show.html.erb
@@ -36,7 +36,7 @@
       <%= render partial: "find/courses/salary", locals: { course: } %>
     <% end %>
 
-    <%= render FindInterface::Courses::FeesAndFinancialSupportComponent::View.new(course) %>
+    <%= render FindInterface::Courses::FinancialSupport::FeesAndFinancialSupportComponent::View.new(course) %>
 
     <% if course.provider.train_with_us.present? ||  course.about_accrediting_body.present? %>
       <%= render partial: "find/courses/about_the_provider", locals: { course: } %>
