[0438] Amended to use the course vs provider version of `can_sponsor_student_visa` & `can_sponsor_skilled_worker_visa`

--- a/app/components/find_interface/courses/international_students_component/view.html.erb
+++ b/app/components/find_interface/courses/international_students_component/view.html.erb
@@ -10,7 +10,7 @@
       <li>have indefinite leave to remain in the UK</li>
     </ul>
 
-    <p class="govuk-body"><%= visa_sponsorship_status %></p>
+    <%= t("find.international_candidates.#{visa_type}.#{sponsorship_availability}.html") %>
 
     <p class="govuk-body">Alternatively, check if you’re eligible for a different type of visa, such as a Graduate or Family visa, that allows you to train to be a teacher without being sponsored.</p>
 
