Add similar logic for SkilledWorkerVisaSponsorship
To be used with school direct salaried courses

WIP

--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -137,6 +137,21 @@
         <% end %>
       <% end %>
 
+      <% if course.funding_type == "salary" %>
+        <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_skilled_worker_visa" } }) do |row| %>
+          <% row.key { "Skilled worker visa" } %>
+          <% row.value { course.can_sponsor_skilled_worker_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
+          <% if course.is_published? %>
+            <% row.action %>
+          <% else %>
+            <% row.action(**{
+              href: skilled_worker_visa_sponsorship_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+              visually_hidden_text: "can sponsor skilled_worker visa",
+            }) %>
+          <% end %>
+        <% end %>
+      <% end %>
+
       <% summary_list.row(html_attributes: { data: { qa: "course__applications_open" } }) do |row| %>
         <% row.key { "Applications open" } %>
         <% row.value { l(course.applications_open_from&.to_date) } %>
