--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -122,7 +122,7 @@
         <% end %>
       <% end %>
 
-      <% if course.funding_type == "fee" %>
+      <% if course.funding_type == "fee" && @provider.provider_type == "lead_school" %>
         <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_student_visa" } }) do |row| %>
           <% row.key { "Student visa" } %>
           <% row.value { course.can_sponsor_student_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
@@ -137,7 +137,7 @@
         <% end %>
       <% end %>
 
-      <% if course.funding_type == "salary" %>
+      <% if course.funding_type == "salary" && @provider.provider_type == "lead_school" %>
         <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_skilled_worker_visa" } }) do |row| %>
           <% row.key { "Skilled worker visa" } %>
           <% row.value { course.can_sponsor_skilled_worker_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
