--- a/app/views/publish/courses/confirmation.html.erb
+++ b/app/views/publish/courses/confirmation.html.erb
@@ -82,7 +82,7 @@
             <% row.key { "Fee or salary" } %>
             <% row.value { course.funding } %>
             <% row.action(**{
-              href: new_publish_provider_recruitment_cycle_courses_fee_or_salary_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_confirmation: true)),
+              href: new_publish_provider_recruitment_cycle_courses_fee_or_salary_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_visa: true, goto_confirmation: true)),
               visually_hidden_text: "if fee or salary",
             }) %>
           <% end %>
