--- a/app/views/publish/courses/_basic_details_tab.html.erb
+++ b/app/views/publish/courses/_basic_details_tab.html.erb
@@ -122,32 +122,34 @@
         <% end %>
       <% end %>
 
-      <% if course.funding_type == "fee" && @provider.provider_type == "lead_school" %>
-        <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_student_visa" } }) do |row| %>
-          <% row.key { "Student visa" } %>
-          <% row.value { course.can_sponsor_student_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
-          <% if course.is_published? %>
-            <% row.action %>
-          <% else %>
-            <% row.action(**{
-              href: student_visa_sponsorship_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
-              visually_hidden_text: "can sponsor student visa",
-            }) %>
+      <% if FeatureService.enabled?(:visa_sponsorship_on_course) %>
+        <% if course.funding_type == "fee" && @provider.provider_type == "lead_school" %>
+          <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_student_visa" } }) do |row| %>
+            <% row.key { "Student visa" } %>
+            <% row.value { course.can_sponsor_student_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
+            <% if course.is_published? %>
+              <% row.action %>
+            <% else %>
+              <% row.action(**{
+                href: student_visa_sponsorship_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+                visually_hidden_text: "can sponsor student visa",
+              }) %>
+            <% end %>
           <% end %>
         <% end %>
-      <% end %>
 
-      <% if course.funding_type == "salary" && @provider.provider_type == "lead_school" %>
-        <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_skilled_worker_visa" } }) do |row| %>
-          <% row.key { "Skilled worker visa" } %>
-          <% row.value { course.can_sponsor_skilled_worker_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
-          <% if course.is_published? %>
-            <% row.action %>
-          <% else %>
-            <% row.action(**{
-              href: skilled_worker_visa_sponsorship_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
-              visually_hidden_text: "can sponsor skilled_worker visa",
-            }) %>
+        <% if course.funding_type == "salary" && @provider.provider_type == "lead_school" %>
+          <% summary_list.row(html_attributes: { data: { qa: "course__can_sponsor_skilled_worker_visa" } }) do |row| %>
+            <% row.key { "Skilled worker visa" } %>
+            <% row.value { course.can_sponsor_skilled_worker_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
+            <% if course.is_published? %>
+              <% row.action %>
+            <% else %>
+              <% row.action(**{
+                href: skilled_worker_visa_sponsorship_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
+                visually_hidden_text: "can sponsor skilled_worker visa",
+              }) %>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
