--- a/app/views/publish/courses/confirmation.html.erb
+++ b/app/views/publish/courses/confirmation.html.erb
@@ -78,13 +78,24 @@
             }) %>
           <% end %>
         <% else %>
-          <% summary_list.row(html_attributes: { data: { qa: "course__fee_or_salary" } }) do |row| %>
-            <% row.key { "Fee or salary" } %>
-            <% row.value { course.funding } %>
-            <% row.action(**{
-              href: new_publish_provider_recruitment_cycle_courses_fee_or_salary_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_visa: true, goto_confirmation: true)),
-              visually_hidden_text: "if fee or salary",
-            }) %>
+          <% if FeatureService.enabled?(:visa_sponsorship_on_course) %>
+            <% summary_list.row(html_attributes: { data: { qa: "course__fee_or_salary" } }) do |row| %>
+              <% row.key { "Fee or salary" } %>
+              <% row.value { course.funding } %>
+              <% row.action(**{
+                href: new_publish_provider_recruitment_cycle_courses_fee_or_salary_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_visa: true, goto_confirmation: true)),
+                visually_hidden_text: "if fee or salary",
+              }) %>
+            <% end %>
+          <% else %>
+            <% summary_list.row(html_attributes: { data: { qa: "course__fee_or_salary" } }) do |row| %>
+              <% row.key { "Fee or salary" } %>
+              <% row.value { course.funding } %>
+              <% row.action(**{
+                href: new_publish_provider_recruitment_cycle_courses_fee_or_salary_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_confirmation: true)),
+                visually_hidden_text: "if fee or salary",
+              }) %>
+            <% end %>
           <% end %>
         <% end %>
 
