--- a/app/views/publish/courses/skilled_worker_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/skilled_worker_visa_sponsorship/_form_fields.html.erb
@@ -6,11 +6,16 @@
       </h1>
     </legend>
 
-   <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-     Can your organisation sponsor Skilled Worker visas for this course?
-   </legend>
+    <% if @course.pg_teaching_apprenticeship? && !@provider.can_sponsor_skilled_worker_visas? %>
+        <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
+    <% end %>
+
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+      Can your organisation sponsor Skilled Worker visas for this course?
+    </legend>
 
     <%= render "publish/shared/error_messages", error_keys: [:can_sponsor_skilled_worker_visa] %>
+
     <div class="govuk-radios govuk-!-margin-top-2" data-module="govuk-radios">
       <% course.edit_course_options["can_sponsor_skilled_worker_visas"].each do |value| %>
         <div class="govuk-radios__item">
