--- a/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
@@ -3,7 +3,13 @@
     <%= t("page_titles.student_visas.new") %>
   </h1>
 
-  <%= render "inset_text" %>
+    <% if @course.is_uni_or_scitt? %>
+      <% if !@provider.can_sponsor_skilled_worker_visas? %>
+        <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
+      <% end %>
+    <% else %>
+      <%= render "inset_text" %>
+    <% end %>
 
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
@@ -11,6 +17,7 @@
     </legend>
 
     <%= render "publish/shared/error_messages", error_keys: [:can_sponsor_student_visa] %>
+
     <div class="govuk-radios govuk-!-margin-top-2" data-module="govuk-radios">
       <% course.edit_course_options["can_sponsor_student_visas"].each do |value| %>
         <div class="govuk-radios__item">
