--- a/app/views/publish/courses/skilled_worker_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/skilled_worker_visa_sponsorship/_form_fields.html.erb
@@ -6,7 +6,7 @@
       </h1>
     </legend>
 
-    <% if @course.pg_teaching_apprenticeship? && !@provider.can_sponsor_skilled_worker_visas? %>
+    <% if @course.pg_teaching_apprenticeship? && !@provider.can_sponsor_skilled_worker_visa %>
         <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
     <% end %>
 
