--- a/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
@@ -4,7 +4,7 @@
   </h1>
 
     <% if @course.is_uni_or_scitt? %>
-      <% if !@provider.can_sponsor_skilled_worker_visas? %>
+      <% if !@provider.can_sponsor_student_visa %>
         <p class="govuk-body">Learn more about <%= govuk_link_to "recruiting trainee teachers from overseas", "https://www.gov.uk/guidance/recruit-trainee-teachers-from-overseas-accredited-itt-providers" %>.</p>
       <% end %>
     <% else %>
