[434] Handle editing funding type from course page

--- a/app/views/publish/courses/fee_or_salary/_form_fields.html.erb
+++ b/app/views/publish/courses/fee_or_salary/_form_fields.html.erb
@@ -13,7 +13,7 @@
                 "fee",
                 class: "govuk-radios__input" %>
         <%= form.label :funding_type,
-                "Fee paying (no salary)",
+                "Fee paying - no salary",
                 value: "fee",
                 class: "govuk-label govuk-radios__label",
                 data: { qa: "course__funding_type_fee" } %>
@@ -24,7 +24,7 @@
                 "salary",
                 class: "govuk-radios__input" %>
         <%= form.label :funding_type,
-                "Salaried",
+                "Salary",
                 value: "salary",
                 class: "govuk-label govuk-radios__label",
                 data: { qa: "course__funding_type_salary" } %>
@@ -35,7 +35,7 @@
                 "apprenticeship",
                 class: "govuk-radios__input" %>
         <%= form.label :funding_type,
-                "Teaching apprenticeship (with salary)",
+                "Teaching apprenticeship - with salary",
                 value: "apprenticeship",
                 class: "govuk-label govuk-radios__label",
                 data: { qa: "course__funding_type_apprenticeship" } %>
