--- a/app/views/publish/courses/confirmation.html.erb
+++ b/app/views/publish/courses/confirmation.html.erb
@@ -152,7 +152,7 @@
         <% if FeatureService.enabled?(:visa_sponsorship_on_course) %>
           <% if course.funding_type == "fee" %>
             <% summary_list.row(html_attributes: { data: { qa: "course__student_visa_sponsorship" } }) do |row| %>
-              <% row.key { "Visa sponsorship" } %>
+              <% row.key { "Student visas" } %>
               <% row.value { course.can_sponsor_student_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
               <% row.action(**{
                 href: new_publish_provider_recruitment_cycle_courses_student_visa_sponsorship_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_confirmation: true)),
