--- a/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
+++ b/app/views/publish/courses/student_visa_sponsorship/_form_fields.html.erb
@@ -1,12 +1,14 @@
 <%= render "publish/shared/error_wrapper", error_keys: [:can_sponsor_student_visa], data_qa: "course__can_sponsor_student_visa" do %>
-  <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-      <h1 class="govuk-fieldset__heading">
-        <%= t("page_titles.student_visas.new") %>
-      </h1>
-    </legend>
+  <h1 class="govuk-heading-l">
+    <%= t("page_titles.student_visas.new") %>
+  </h1>
 
-    <%= render "inset_text" %>
+  <%= render "inset_text" %>
+
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+      Is Student visa sponsorship available for this course?
+    </legend>
 
     <%= render "publish/shared/error_messages", error_keys: [:can_sponsor_student_visa] %>
     <div class="govuk-radios govuk-!-margin-top-2" data-module="govuk-radios">
