--- a/app/views/publish/providers/details.html.erb
+++ b/app/views/publish/providers/details.html.erb
@@ -70,7 +70,7 @@
         <% enrichment_summary(
              summary_list,
              :provider,
-             "Student visa",
+             "Student visas",
              student_visa_sponsorship_status(@provider),
              %w[can_sponsor_student_visa],
              truncate_value: false,
@@ -81,7 +81,7 @@
         <% enrichment_summary(
              summary_list,
              :provider,
-             "Skilled Worker visa",
+             "Skilled Worker visas",
              skilled_worker_visa_sponsorship_status(@provider),
              %w[can_sponsor_skilled_worker_visa],
              truncate_value: false,
