--- a/app/views/publish/courses/confirmation.html.erb
+++ b/app/views/publish/courses/confirmation.html.erb
@@ -163,7 +163,7 @@
 
           <% if course.school_direct_salaried_training_programme? || course.pg_teaching_apprenticeship? %>
             <% summary_list.row(html_attributes: { data: { qa: "course__skilled_worker_visa_sponsorship" } }) do |row| %>
-              <% row.key { "Skilled Worker visa" } %>
+              <% row.key { "Skilled Worker visas" } %>
               <% row.value { course.can_sponsor_skilled_worker_visa ? "Yes - can sponsor " : "No - cannot sponsor" } %>
               <% row.action(**{
                 href: new_publish_provider_recruitment_cycle_courses_skilled_worker_visa_sponsorship_path(course.provider.provider_code, course.recruitment_cycle.year, params.to_unsafe_h.merge(goto_confirmation: true)),
