Utilise caption text component
To add "Add course" text to all steps in the "Add new course flow"

--- a/app/views/publish/courses/age_range/new.html.erb
+++ b/app/views/publish/courses/age_range/new.html.erb
@@ -5,6 +5,8 @@
   <%= govuk_back_link_to(@back_link_path) %>
 <% end %>
 
+<%= render CaptionText::View.new(text: "Add course") %>
+
 <%= render "publish/shared/errors" %>
 
 <div class="govuk-grid-row">
