Add cancel link to all pages in the new course flow
Links to the course index page

--- a/app/views/publish/courses/age_range/new.html.erb
+++ b/app/views/publish/courses/age_range/new.html.erb
@@ -29,5 +29,9 @@
         <% end %>
       <% end %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+    </p>
   </div>
 </div>
