--- a/app/views/publish/courses/apprenticeship/new.html.erb
+++ b/app/views/publish/courses/apprenticeship/new.html.erb
@@ -18,5 +18,9 @@
         <%= render "form_fields", form: fields, gcse_subjects_required: course.gcse_subjects_required %>
       <% end %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+    </p>
   </div>
 </div>
