--- a/app/views/publish/courses/fee_or_salary/new.html.erb
+++ b/app/views/publish/courses/fee_or_salary/new.html.erb
@@ -22,5 +22,9 @@
       ) %>
       <% end %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+    </p>
   </div>
 </div>
