--- a/app/views/publish/courses/level/new.html.erb
+++ b/app/views/publish/courses/level/new.html.erb
@@ -35,5 +35,9 @@
         <%= render "publish/courses/send/form_fields", form: fields %>
       <% end %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+    </p>
   </div>
 </div>
