--- a/app/views/publish/courses/sites/new.html.erb
+++ b/app/views/publish/courses/sites/new.html.erb
@@ -39,3 +39,7 @@
     <% end %>
   <% end %>
 <% end %>
+
+<p class="govuk-body">
+  <%= govuk_link_to(t("cancel"), publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year)) %>
+</p>
