Add cancel link to all editable course basic detail pages
Links to the basic details section of the course

--- a/app/views/publish/courses/subjects/edit.html.erb
+++ b/app/views/publish/courses/subjects/edit.html.erb
@@ -21,5 +21,9 @@
       <%= form.submit course.is_published? ? "Save and publish" : "Save",
         class: "govuk-button", data: { qa: "course__save" } %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), details_publish_provider_recruitment_cycle_course_path(@provider.provider_code, @provider.recruitment_cycle.year, @course.course_code)) %>
+    </p>
   </div>
 </div>
