--- a/app/views/publish/courses/sites/edit.html.erb
+++ b/app/views/publish/courses/sites/edit.html.erb
@@ -47,5 +47,9 @@
 
       <%= f.govuk_submit course.is_published? ? "Save and publish" : "Save" %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), details_publish_provider_recruitment_cycle_course_path(@provider.provider_code, @provider.recruitment_cycle.year, @course.course_code)) %>
+    </p>
   </div>
 </div>
