--- a/app/views/publish/courses/gcse_requirements/edit.html.erb
+++ b/app/views/publish/courses/gcse_requirements/edit.html.erb
@@ -33,6 +33,10 @@
 
       <%= f.submit @course.only_published? ? "Save and publish" : "Save", class: "govuk-button", data: { qa: "gcse_requirements__save" } %>
     <% end %>
+
+    <p class="govuk-body">
+      <%= govuk_link_to(t("cancel"), publish_provider_recruitment_cycle_course_path(@provider.provider_code, @provider.recruitment_cycle.year, @course.course_code)) %>
+    </p>
   </div>
   <aside class="govuk-grid-column-one-third" data-qa="course__related_sidebar">
      <%= render(
