--- a/app/views/publish/courses/fee_or_salary/_form_fields.html.erb
+++ b/app/views/publish/courses/fee_or_salary/_form_fields.html.erb
@@ -2,7 +2,7 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h1 class="govuk-fieldset__heading">
-        Is it fee paying or salaried?
+        Funding type
       </h1>
     </legend>
 
