[521] Replace empty with not entered

--- a/app/views/publish/courses/_description_content.html.erb
+++ b/app/views/publish/courses/_description_content.html.erb
@@ -5,7 +5,7 @@
     summary_list,
     :course,
     "About this course",
-    course.about_course,
+    course_value_provided?(course.about_course),
     %w[about_course],
     action_path: about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code),
     action_visually_hidden_text: "details about this course",
@@ -15,7 +15,7 @@
     summary_list,
     :course,
     "Interview process",
-    course.interview_process,
+    course_value_provided?(course.interview_process),
     %w[interview_process],
     action_path: "#{about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#interview-process",
     action_visually_hidden_text: "details about the interview process",
@@ -25,7 +25,7 @@
     summary_list,
     :course,
     course.placements_heading,
-    course.how_school_placements_work,
+    course_value_provided?(course.how_school_placements_work),
     %w[how_school_placements_work],
     action_path: "#{about_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#how-school-placements-work",
     action_visually_hidden_text: "details about how school placements work",
@@ -45,7 +45,7 @@
       summary_list,
       :course,
       "Course length",
-      course.length,
+      course_value_provided?(course.length),
       %w[course_length],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#course-length",
       action_visually_hidden_text: "course length",
@@ -55,7 +55,7 @@
       summary_list,
       :course,
       "Fee for UK students",
-      number_to_currency(course.fee_uk_eu),
+      course_value_provided?(number_to_currency(course.fee_uk_eu)),
       %w[fee_uk_eu],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-uk",
       action_visually_hidden_text: "fee for UK students",
@@ -65,7 +65,7 @@
       summary_list,
       :course,
       "Fee for international students",
-      number_to_currency(course.fee_international),
+      course_value_provided?(number_to_currency(course.fee_international)),
       %w[fee_international],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-international",
       action_visually_hidden_text: "fee for international students",
@@ -75,7 +75,7 @@
       summary_list,
       :course,
       "Fee details",
-      course.fee_details,
+      course_value_provided?(course.fee_details),
       %w[fee_details],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#fee-details",
       action_visually_hidden_text: "fee details",
@@ -85,7 +85,7 @@
       summary_list,
       :course,
       "Financial support you offer",
-      course.financial_support,
+      course_value_provided?(course.financial_support),
       %w[financial_support],
       action_path: "#{fees_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#financial-support",
       action_visually_hidden_text: "details of financial support you offer",
@@ -101,7 +101,7 @@
       summary_list,
       :course,
       "Course length",
-      course.length,
+      course_value_provided?(course.length),
       %w[course_length],
       action_path: "#{salary_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#course-length",
       action_visually_hidden_text: "course length",
@@ -111,7 +111,7 @@
       summary_list,
       :course,
       "Salary",
-      course.salary_details,
+      course_value_provided?(course.salary_details),
       %w[salary_details],
       action_path: "#{salary_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#salary",
       action_visually_hidden_text: "salary",
@@ -148,7 +148,7 @@
     summary_list,
     :course,
     "Personal qualities",
-    course.personal_qualities,
+    course_value_provided?(course.personal_qualities),
     %w[personal_qualities],
     action_path: "#{requirements_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#personal-qualities",
     action_visually_hidden_text: "personal qualities",
@@ -158,7 +158,7 @@
     summary_list,
     :course,
     "Other requirements",
-    course.other_requirements,
+    course_value_provided?(course.other_requirements),
     %w[other_requirements],
     action_path: "#{requirements_publish_provider_recruitment_cycle_course_path(@provider.provider_code, course.recruitment_cycle_year, course.course_code)}#other-requirements",
     action_visually_hidden_text: "other requirements",
