--- a/app/views/find/search/subjects/new.html.erb
+++ b/app/views/find/search/subjects/new.html.erb
@@ -1,5 +1,14 @@
 <% content_for :page_title, title_with_error_prefix(t("find.subjects_page.title"), @subjects_form.errors.present?) %>
 
+<% content_for :before_content do %>
+  <%= govuk_back_link_to(find_age_groups_path(
+    age_group: params[:age_group],
+    city_town_postcode_query: params[:city_town_postcode_query],
+    find_courses: params[:find_courses],
+    school_uni_or_provider_query: params[:school_uni_or_provider_query]
+  )) %>
+<% end %>
+
 <%= form_with(model: @subjects_form, url: find_subjects_create_path, method: :get) do |form| %>
   <%= form.govuk_error_summary %>
 
